--- a/references.bib
+++ b/references.bib
@@ -496,3 +496,17 @@
   doi = {10.20982/tqmp.16.4.p376},
   langid = {english}
 }
+
+@article{niiniluotoVerisimilitudeThirdPeriod1998,
+  title = {Verisimilitude: {{The Third Period}}},
+  shorttitle = {Verisimilitude},
+  author = {Niiniluoto, Ilkka},
+  year = {1998},
+  month = mar,
+  journal = {The British Journal for the Philosophy of Science},
+  volume = {49},
+  number = {1},
+  pages = {1--29},
+  issn = {0007-0882, 1464-3537},
+  doi = {10.1093/bjps/49.1.1}
+}
