--- a/references.bib
+++ b/references.bib
@@ -464,7 +464,7 @@
 @incollection{wesleyc.salmonStatisticalExplanation1970,
   title = {Statistical {{Explanation}}},
   booktitle = {The {{Nature}} \& Function of Scientific Theories: Essays in Contemporary Science and Philosophy},
-  author = {{Wesley C. Salmon}},
+  author = {Salmon, Wesley C.},
   year = {1970},
   series = {University of {{Pittsburgh}} Series in the Philosophy of Scienc},
   number = {4},
