--- a/references.bib
+++ b/references.bib
@@ -510,3 +510,18 @@
   issn = {0007-0882, 1464-3537},
   doi = {10.1093/bjps/49.1.1}
 }
+
+@article{lishnerConciseSetCore2015,
+  title = {A {{Concise Set}} of {{Core Recommendations}} to {{Improve}} the {{Dependability}} of {{Psychological Research}}},
+  author = {Lishner, David A.},
+  year = {2015},
+  month = mar,
+  journal = {Review of General Psychology},
+  volume = {19},
+  number = {1},
+  pages = {52--68},
+  publisher = {{SAGE Publications Inc}},
+  issn = {1089-2680},
+  doi = {10.1037/gpr0000028},
+  langid = {english}
+}
