--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -462,20 +462,20 @@ Crucially, perfect means here that the theoretical risk can be judged with low u
 
 # Discussion
 
-To summarize, we showed that higher theoretical risk and lower uncertainty about theoretical risk lead to higher expected epistemic value across a variety of measures.
-The former result, that increasing theoretical risk leads to higher expected epistemic value, reconstructs the appeal of confirmatory research.
-However, theoretical risk is something researcher have only limited control over, e.g., theories are often vague and illdefined, resources are limited, and increasing theoretical risk usually decreases detectability (a special instance of this trade off is the well known tension between alpha error and power).
+To summarize, we showed that both higher theoretical risk and lower uncertainty about theoretical risk lead to higher expected epistemic value across a variety of measures.
+The former result, that increasing theoretical risk leads to higher expected epistemic value, reconstructs the appeal and central goal of confirmatory research.
+However, theoretical risk is something researcher have only limited control over, e.g., theories are often vague and ill-defined, resources are limited, and increasing theoretical risk usually decreases detectability of a hypothesized effect (a special instance of this trade-off is the well known tension between type-I error and statistical power).
 Before researchers may preregister a confirmatory study with high theoretical risk, they must ensure that they are able to conduct a confirmatory study.
-Researchers must develop theories sufficiently and then have the resources to adequately balance detectability against theoretical risk.
+Specifically, this entails the development of sufficiently precise theories and having the resources (typically sample size) to adequately balance detectability against theoretical risk.
 
 A preregistration may at most help to invest some time into developing more specific, hence riskier, implications of a theory.
-But for a confirmatory science it will not be enough to preregister.
+But for a confirmatory science, it will not be enough to preregister all studies.
 This undertaking requires action from the whole research community [@lishnerConciseSetCore2015].
-Incentive structures must be more willing to evaluate not the outcomes of a study but the rigor with which it was conducted [@caganSanFranciscoDeclaration2013; @schonbrodtResponsibleResearchAssessment2022].
+Incentive structures must be created to evaluate not the outcomes of a study but the rigor with which it was conducted [@caganSanFranciscoDeclaration2013; @schonbrodtResponsibleResearchAssessment2022].
 Journal editors could encourage theoretical developments and be willing to accept registered reports [@friedLackTheoryBuilding2020; @friedTheoriesModelsWhat2020; @vanrooijTheoryDevelopmentRequires2020; @vanrooijTheoryTestHow2021].
 Funding agencies should demand an explicit statement about theoretical risk in relation to detectability and must be willing to provide the necessary resources to reach adequate levels of both [@kooleRewardingReplicationsSure2012].
 
-Our later result, on the importance of preregistration for minimizing uncertainty, has two important implications.
+Our latter result, on the importance of preregistration for minimizing uncertainty, has two important implications.
 The first is, that even if all imaginable actions regarding promoting higher theoretical risk are taken, confirmatory research should be preregistered.
 Otherwise the uncertainty about the theoretical risk will diminish the advantage of confirmatory research.
 Second, even under less than ideal circumstances for confirmatory research, preregistration is beneficial.
@@ -488,21 +488,21 @@ Precise predictions would have very high theoretical risk (they are likely incor
 A statistical procedure, may have high or low theoretical risk depending on the specifics of the model used.
 Specifying the process, therefore, is in line with the rational we propose here, but is incompatible with strictly confirmatory research.
 
-Second, researchers often have to deviate from the preregistration and make data-dependent decisions outside of the preregistration.
+Second, researchers often have to deviate from the preregistration and make data-dependent decisions after the preregistration.
 If the only goal of preregistration is to ensure confirmatory research, such changes are not justifiable.
 However, under our rational some changes may be justified.
-Any change would increase the uncertainty about the theoretical risk and may even decrease the theorethical risk.
+Any change increases the uncertainty about the theoretical risk and may even decrease the theorethical risk.
 The changes still may be worthwhile, if the negative outcomes may be offset by an increase in detectability due to the change.
-Consider a preregistration that failed to specify what to do with missing values where the researchers subsequently encounter missings.
-In such case, the detectability is zero, since the data cannot be analyzed without a decision about how to handle the missing data.
-Any such decision would constitute a deviation from the preregistration.
-Furthermore, a reader cannot rule out that the researchers leveraged the decision to decrease theoretical risk, i.e., picking among all options the one that delivers the most beneficial results for the theory.
+Consider a preregistration that failed to specify how to handle missing values, and researchers subsequently encountering missing values.
+In such case, detectability becomes zero because the data cannot be analyzed without a post-hoc decision about how to handle the missing data.
+Any such decision would constitute a deviation from the preregistration, which is perfectly waranted under our general objective.
+Note that a reader cannot rule out that the researchers leveraged the decision to decrease theoretical risk, i.e., picking among all options the one that delivers the most beneficial results for the theory (in the previous example, chosing between various options of handling missing values).
 Whatever decision they make, increased uncertainty about the theoretical risk is inevitable and the expected epistemic value is decreased compared to a world where they anticipated the need to deal with missing data.
 However, it is still justified to deviate.
 After all they have not anticipated the case and are left with a detectablilty of zero.
 Any decision will increase detectability to a non-zero value, likely offsetting the increase in uncertainty.
 The researchers also may do their best to argue that the deviation was not motivated by increasing theoretical risk, thereby, decreasing the uncertainty.
-Maybe there is one decision that fits well with the theory or with the study design.
+Ideally, there is a default decision that fits well with the theory or with the study design.
 Or, if there is no obvious candidate, the researchers could conduct a multiverse analysis of the available options to deal with missings to show the influence of the decision [@steegenIncreasingTransparencyMultiverse2016].
 
 Using reduction in uncertainty as the objective for preregistration does not only explain some existing behavior, it allows to form recommendations to improve the practice of preregistration.
@@ -511,9 +511,9 @@ In particular, a preregistration should be specific about the procedure that is 
 Such procedure may accommodate a wide range of possible data, i.e., it may be exploratory.
 The theoretical risk, however low, must be communicated clearly.
 Parts of the process left unspecified, imply uncertainty, which is what a preregistration should reduce.
-However, specifying procedures that can be expected to not work, will lead to deviation, and uncertainty later.
+However, specifying procedures that can be expected to not work, will lead to deviation, and subsequently to larger uncertainty.
 
-We have proposed a highly specific, yet practical preregistration procedure called preregistration as code (PAC) elsewhere [@peikertReproducibleResearchTutorial2021].
+We have proposed a workflow for preregistration called preregistration as code (PAC) elsewhere [@peikertReproducibleResearchTutorial2021].
 In a PAC, researchers use computer code instead of a verbal description.
 This enables a preregistrations to accommodate many different data patterns, yet is very specific about exactly how probable it is to generate evidence even when the theory does not hold (theoretical risk).
 To reduce the liklihood of deviation, we suggest that a PAC is tested on simulated or pilot data.
